[gd_scene load_steps=8 format=3 uid="uid://b47nekib28lp"]

[ext_resource type="Script" path="res://src/scene/player/script_player/Player.gd" id="1_x44q6"]
[ext_resource type="Script" path="res://src/scene/player/script_player/Draw_line.gd" id="2_osgih"]
[ext_resource type="Script" path="res://src/scene/player/UI/spawn_building/Spawn_Buiding.gd" id="3_jku5e"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7a53f"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_tgvie"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CircleShape2D" id="CircleShape2D_c4skd"]
radius = 15.0

[sub_resource type="SphereShape3D" id="SphereShape3D_o1hll"]
radius = 1.0

[node name="Player" type="CharacterBody3D"]
collision_mask = 12
script = ExtResource("1_x44q6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_7a53f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_tgvie")

[node name="Draw" type="Node3D" parent="."]
script = ExtResource("2_osgih")

[node name="nucleo" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.29828, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_jku5e")

[node name="TabContainer" type="TabContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Mining" type="HBoxContainer" parent="CanvasLayer/Control/TabContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/Control/TabContainer/Mining"]
layout_mode = 2
focus_mode = 0
text = "ferro"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/TabContainer"]
visible = false
layout_mode = 2

[node name="mouse" type="Area2D" parent="CanvasLayer/Control"]
position = Vector2(-426, -548)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Control/mouse"]
shape = SubResource("CircleShape2D_c4skd")

[node name="Area2D" type="Area2D" parent="CanvasLayer/Control"]
position = Vector2(-426, -548)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasLayer/Control/Area2D"]
polygon = PackedVector2Array(434, 548, 427, 581, 426, 648, 727, 648, 727, 578, 654, 547)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 192

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_o1hll")

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/Mining/Button" to="CanvasLayer/Control" method="_on_button_pressed"]
[connection signal="area_entered" from="CanvasLayer/Control/Area2D" to="CanvasLayer/Control" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="CanvasLayer/Control/Area2D" to="CanvasLayer/Control" method="_on_area_2d_area_exited"]
[connection signal="area_shape_entered" from="Area3D" to="." method="_on_area_3d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area3D" to="." method="_on_area_3d_area_shape_exited"]
